fix spacing

--- a/style.css
+++ b/style.css
@@ -36,13 +36,12 @@ body {
     width: 100%;
 }
 .music-img {
-    /* width: 20rem; */
-    max-width: 100%;
+    width: 100%;
     display: block;
 }
 
 .order-body {
-    padding: 1rem;
+    padding: 1.25rem;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -52,7 +51,7 @@ body {
     font-size: 1.35rem;
     font-weight: 700;
     color: hsl(223, 47%, 23%);
-    margin-bottom: 1rem;
+    margin-bottom: 0.75rem;
 }
 .description-box {
     line-height: 1.8;
@@ -68,7 +67,7 @@ body {
 .plan-details {
     display: flex;
     align-items: center;
-    gap: 0.85rem;
+    gap: 1.15rem;
 }
 .music-icon {
     display: block;
@@ -120,5 +119,12 @@ body {
     }
     .container {
         background: url(images/pattern-background-desktop.svg);
+        background-repeat: no-repeat;
+    }
+    .order-summary {
+        max-width: 25rem;
+    }
+    .order-body {
+        padding: 1.5rem;
     }
 }
